argocd/base/argo-cd-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-cd-ui-https
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-redirect@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - argo.govirto.com
    secretName: argocd-secret
  rules:
  - host: argo.govirto.com
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argo-cd-ui-http
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: argocd-https-redirect@kubernetescrd
spec:
  rules:
  - host: argo.govirto.com
    http:
      paths:
      - path: /
        backend:
          serviceName: argocd-server
          servicePort: http
